--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>MCB</title>
+  <title>Angular Test</title>
   <!-- <base href="/"> -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
